# technological-understanding-of-communication

./: .gitignore  README.md  environment_gpu.yml  pyproject.toml
artifacts/prototypes/: calm_members.csv  calm_proto.npy  contact_members.csv  contact_proto.npy  courtship_members.csv  courtship_proto.npy  defense_members.csv  defense_proto.npy  escape_members.csv  escape_proto.npy  prototypes_summary.csv  vibration_members.csv  vibration_proto.npy
artifacts/text_anchors/: all_species_text_anchors_2d.csv  cornsnake.csv  cornsnake.npy  cornsnake_text_anchors.csv  cornsnake_text_anchors.npy  cornsnake_text_anchors.rules.npy  crested_gecko_text_anchors.csv  crested_gecko_text_anchors.npy  gecko.csv  gecko.npy  nearest_overall_top5.csv
configs/: adjust.yml  cornsnake.yml  download.yaml  gecko.yml
configs/anchors/: common_meanings.yml  cornsnake.yml  crestedgecko.yml  dog.yml  gecko.yml
configs/rules/: cornsnake_rules.yml  crestedgecko_rules.yml
data/meta/: ledger.csv  manifest.tsv
docs/: environment.yml  v_0_정합을_위한_수정_사항_목록_action_items.md  논문_리비전_가이드라인_커뮤니케이션의_공학적_이해_v_1.md
lib/: io_utils.py
lib/ingest/: audioset_dog.py
lib/ops/: download_trim.py
lib/scripts/: apply_rules.py  (+16 more)
scripts/: batch_download_trim.py  make_manifest.py  train_audio_baseline.py  tsv_to_jsonl.py
scripts_legacy/: batch_download_trim.py  make_splits.py
tuc/: __init__.py  adjust.py  alignment.py  audio_backend.py  cli.py  cli_input.py  encoder.py  ingest.py  io.py  model_build.py  rules.py  search.py  serach.py
tuc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+35 files in other folders)
