[project]
name = "tuc"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["typer","pyyaml","pandas"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ⬇️ 이것이 핵심 (src 레이아웃)
[tool.setuptools]
packages = ["tuc"]
package-dir = { "tuc" = "tuc" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["tuc*"]
