[project]
name = "tuc"
version = "0.2.0"
description = "Technological Understanding of Communication - anchor-based embedding workspace"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pandas",
  "pyyaml"
]
# SBERT 가속을 쓰려면 선택적으로 설치: pip install sentence-transformers

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tuc"]

[project.scripts]
tuc = "tuc.cli:main"
