[project]
name = "tuc"
version = "0.2.0"
requires-python = ">=3.10,<3.11"
dependencies = [
  "numpy==1.26.4",
  "pandas==2.2.2",
  "pyyaml==6.0.1",
  "umap-learn==0.5.6",
  "scikit-learn==1.4.2"
]

[project.optional-dependencies]
text = ["sentence-transformers==2.2.2"]
audio = [
  "librosa==0.10.2.post1",
  "soundfile==0.12.1",
  "transformers==4.42.3",
  "torch==2.2.2",
  "torchaudio==2.2.2"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tuc"]

[project.scripts]
tuc = "tuc.cli:main"
